# personal-ai-infra

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: discord_bot.py  main.py  models.py
app/finance/: .email_matcher.py.swp  __init__.py  categorizer.py  email_matcher.py  importer.py  models.py  store.py  web.py
app/services/: .imap_client.py.swp  agent_registry.py  assistant_flow.py  caldav_client.py  channel_memory.py  classifier.py  feedback.py  imap_accounts.py  imap_client.py  orchestrator.py  planner.py  projects_store.py  proposal_store.py  roles.py  settings.py  sync_scheduler.py  sync_state.py  travel.py
data/: discord_agents.example.json  imap_accounts.example.json  planner_config.json  roles.json
