[project]
name = "ai-server"
version = "0.4.0"
description = "Local AI assistant backend with email triage, planning, CalDAV, and Discord orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.10.0",
  "discord.py>=2.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
